# PvZ

./: .gitignore  Case_for_sensor.FCStd  INA219.py  INA219_port_test.py  README.md  docker-compose.yml  gps_test.py  main_DS+HW.py  main_LoRa_pager.py  main_pin_test.py  package-lock.json  package.json  sensor_node_base.stl  sensor_node_lid.stl
.github/workflows/: ci.yml
IaC/ansible/: inventory.ini  site.yml
IaC/localhosting/: .env.example  docker-compose.yaml
IaC/localhosting/db/initdb/: 001_extensions.sql  010_schema.sql
IaC/localhosting/mosquitto/config/: acl  mosquitto.conf
IaC/localhosting/mosquitto/data/: mosquitto.db
IaC/localhosting/services/data-reader/: Dockerfile  app.py
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  db.py  deps.py  main.py  mqtt_runtime.py
backend/app/repositories/: auth.py  commands.py  devices.py  telemetry.py
backend/app/routers/: auth.py  charts.py  devices.py  map.py  tenants.py
backend/app/schemas/: auth.py  devices.py  models.py  telemetry.py  tenants.py
backend/app/services/: config.py  mosq_dynsec.py  tenants.py
frontend-app/: Dockerfile  index.html  package-lock.json  package.json
frontend-app/src/: App.vue  api.js  auth.js  devicePresentation.js  main.js  router.js  style.css
frontend-app/src/assets/: charts.css
frontend-app/src/components/: ChartsView.vue  DeviceControlView.vue  HomeView.vue  LoginView.vue  ManagementView.vue  MapView.vue  RegisterView.vue  TenantsView.vue
frontend-app/src/utils/: emailDomain.js
(+12 files in other folders)
