[project]
name = "backend"
version = "0.1.0"
description = "backend for pvz project"
authors = [
    {name = "Repeynik",email = "M16072005m@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
