[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.5.2",
  "asyncpg>=0.29.0",
  "asyncio-mqtt>=0.16.1",
  "python-multipart>=0.0.9",
  "pyjwt>=2.9.0",
  "passlib[bcrypt]>=1.7.4",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
